@@ -30,6 +30,7 @@
 	all : allow $ prefixed identifiers (for macros usage only)
 	all : allow to access modules subtype statics with pack.Mod.Type.value
 		and fixed identifier resolution order
+	flash9 : added @:bitmap("file") for simple embedding
 
 2011-01-30: 2.07
 	all : fixed completion support with --remap
